--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Web</h1>
-      <h2 class="project-tagline">京东</h2>
+      <h2 class="project-tagline">京东ONME</h2>
       <a href="https://github.com/liuyibo715/web" class="btn">View on GitHub</a>
       <a href="https://github.com/liuyibo715/web/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/liuyibo715/web/tarball/master" class="btn">Download .tar.gz</a>
